feat(client): update EntitySelectScreen and add infinity clock
- Update EntitySelectScreen to support entity selection instead of items
- Add infinity clock block and item models
- Modify infinity clock block shape
- Remove unused code and imports- Update language file with new tooltip for infinity upgrade