@@ -1,55 +1,50 @@
 package committee.nova.mods.avaritia.api.client.screen;
 
 import com.google.common.collect.Lists;
-import com.google.gson.JsonObject;
 import committee.nova.mods.avaritia.api.client.screen.component.OperationButton;
+import committee.nova.mods.avaritia.api.client.screen.component.OperationButtonType;
 import committee.nova.mods.avaritia.api.client.screen.component.Text;
 import committee.nova.mods.avaritia.api.client.util.GuiUtils;
-import committee.nova.mods.avaritia.api.utils.ItemUtils;
 import committee.nova.mods.avaritia.api.utils.StringUtils;
+import committee.nova.mods.avaritia.init.registry.ModSearches;
 import lombok.Getter;
 import lombok.NonNull;
-import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.EditBox;
 import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.player.LocalPlayer;
-import net.minecraft.client.searchtree.SearchRegistry;
+import net.minecraft.client.gui.screens.inventory.InventoryScreen;
 import net.minecraft.client.searchtree.SearchTree;
-import net.minecraft.core.NonNullList;
-import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.TagKey;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.*;
+import net.minecraftforge.registries.ForgeRegistries;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.joml.Quaternionf;
 import org.lwjgl.glfw.GLFW;
 
 import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Consumer;
-import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
-import static committee.nova.mods.avaritia.Static.GSON;
+import static net.minecraft.client.gui.screens.inventory.SmithingScreen.ARMOR_STAND_ANGLE;
 
 /**
  * @Project: Avaritia
  * @Author: cnlimiter
- * @CreateTime: 2025/1/22 20:09
- * @Description:
+ * @CreateTime: 2024/12/25 20:09
+ * @Description: from <a href="https://github.com/TinyTsuki/SakuraSignIn_MC">...</a>
  */
 public class EntitySelectScreen extends Screen {
 
     private static final Logger LOGGER = LogManager.getLogger();
-    private final NonNullList<ItemStack> allItemList = this.getAllItemList();
-    private final List<ItemStack> playerItemList = this.getPlayerItemList();
     // 每行显示数量
-    private final int itemPerLine = 9;
+    private final int itemPerLine = 5;
     // 每页显示行数
     private final int maxLine = 5;
 
@@ -60,11 +55,12 @@ public class EntitySelectScreen extends Screen {
     /**
      * 输入数据回调1
      */
-    private final Consumer<ItemStack> onDataReceived1;
+    private final Consumer<EntityType<?>> onDataReceived1;
     /**
      * 是否要显示该界面, 若为false则直接关闭当前界面并返回到调用者的 Screen
      */
     private final Supplier<Boolean> shouldClose;
+
     /**
      * 输入框
      */
@@ -76,7 +72,7 @@ public class EntitySelectScreen extends Screen {
     /**
      * 搜索结果
      */
-    private final List<ItemStack> itemList = new ArrayList<>();
+    private final List<EntityType<?>> itemList = new ArrayList<>();
     /**
      * 操作按钮
      */
@@ -86,22 +82,15 @@ public class EntitySelectScreen extends Screen {
      */
     private final List<OperationButton> ITEM_BUTTONS = new ArrayList<>();
     /**
-     * 显示的标签
-     */
-    private final Set<TagKey<Item>> visibleTags = new HashSet<>();
-    /**
      * 当前选择的物品 ID
      */
     @Getter
-    private String selectedItemId = "";
+    private String selectedEntityId;
     /**
      * 当前选择的物品
      */
-    private ItemStack currentItem = new ItemStack(Items.AIR);
-    /**
-     * 背包模式
-     */
-    private boolean inventoryMode = false;
+    private EntityType<?> currentEntity;
+
 
     private int bgX;
     private int bgY;
@@ -132,44 +121,20 @@ public class EntitySelectScreen extends Screen {
 
     // endregion 滚动条相关
 
-    /**
-     * 操作按钮类型
-     */
-    @Getter
-    enum OperationButtonType {
-        TYPE(1),
-        ITEM(2),
-        COUNT(3),
-        NBT(4),
-        SLIDER(5),
-        ;
-
-        final int code;
-
-        OperationButtonType(int code) {
-            this.code = code;
-        }
-
-        static OperationButtonType valueOf(int code) {
-            return Arrays.stream(values()).filter(v -> v.getCode() == code).findFirst().orElse(null);
-        }
+    public EntitySelectScreen(@NonNull Screen callbackScreen, @NonNull Consumer<EntityType<?>> onDataReceived
+                            ) {
+        this(callbackScreen, onDataReceived, null);
     }
 
-    public EntitySelectScreen(@NonNull Screen callbackScreen, @NonNull Consumer<ItemStack> onDataReceived, @NonNull ItemStack defaultItem) {
-        super(Component.literal("ItemSelectScreen"));
-        this.previousScreen = callbackScreen;
-        this.onDataReceived1 = onDataReceived;
-        this.currentItem = defaultItem;
-        this.selectedItemId = ItemUtils.getId(defaultItem);
-        this.shouldClose = null;
-    }
+    public EntitySelectScreen(@NonNull Screen callbackScreen, @NonNull Consumer<EntityType<?>> onDataReceived,
+                             Supplier<Boolean> shouldClose
 
-    public EntitySelectScreen(@NonNull Screen callbackScreen, @NonNull Consumer<ItemStack> onDataReceived, @NonNull ItemStack defaultItem, Supplier<Boolean> shouldClose) {
-        super(Component.literal("ItemSelectScreen"));
+    ) {
+        super(Component.literal("SelectScreen"));
         this.previousScreen = callbackScreen;
         this.onDataReceived1 = onDataReceived;
-        this.currentItem = defaultItem;
-        this.selectedItemId = ItemUtils.getId(defaultItem);
+        this.currentEntity = EntityType.BEE;
+        this.selectedEntityId = EntityType.BEE.getDescriptionId();
         this.shouldClose = shouldClose;
     }
 
@@ -184,22 +149,22 @@ public class EntitySelectScreen extends Screen {
         this.inputField.setValue(this.inputFieldText);
         this.addRenderableWidget(this.inputField);
         // 创建提交按钮
-        this.addRenderableWidget(GuiUtils.newButton((int) (this.bgX + 90 + this.margin), (int) (this.bgY + (20 + (GuiUtils.ITEM_ICON_SIZE + 3) * 5 + margin))
+        this.addRenderableWidget(GuiUtils.newButton((int) (this.bgX + 90 + this.margin), (int) (this.bgY + (20 + (GuiUtils.ENTITY_ICON_SIZE + 3) * 5 + margin))
                 , (int) (90 - this.margin * 2), 20
                 , GuiUtils.textToComponent(Text.i18n("提交")), button -> {
-                    if (this.currentItem == null) {
+                    if (this.currentEntity == null) {
                         // 关闭当前屏幕并返回到调用者的 Screen
                         Minecraft.getInstance().setScreen(previousScreen);
                     } else {
                         // 获取选择的数据，并执行回调
                         if (onDataReceived1 != null) {
-                            onDataReceived1.accept(this.currentItem);
+                            onDataReceived1.accept(this.currentEntity);
                             Minecraft.getInstance().setScreen(previousScreen);
                         }
                     }
                 }));
         // 创建取消按钮
-        this.addRenderableWidget(GuiUtils.newButton((int) (this.bgX + this.margin), (int) (this.bgY + (20 + (GuiUtils.ITEM_ICON_SIZE + 3) * 5 + margin))
+        this.addRenderableWidget(GuiUtils.newButton((int) (this.bgX + this.margin), (int) (this.bgY + (20 + (GuiUtils.ENTITY_ICON_SIZE + 3) * 5 + margin))
                 , (int) (90 - this.margin * 2), 20
                 , GuiUtils.textToComponent(Text.i18n("取消"))
                 , button -> Minecraft.getInstance().setScreen(previousScreen)));
@@ -210,8 +175,8 @@ public class EntitySelectScreen extends Screen {
     public void render(GuiGraphics graphics, int mouseX, int mouseY, float delta) {
         // 绘制背景
         this.renderBackground(graphics);
-        GuiUtils.fill(graphics, (int) (this.bgX - this.margin), (int) (this.bgY - this.margin), (int) (180 + this.margin * 2), (int) (20 + (GuiUtils.ITEM_ICON_SIZE + 3) * 5 + 20 + margin * 2 + 5), 0xCCC6C6C6, 2);
-        GuiUtils.fillOutLine(graphics, (int) (this.itemBgX - this.margin), (int) (this.itemBgY - this.margin), (int) ((GuiUtils.ITEM_ICON_SIZE + this.margin) * this.itemPerLine + this.margin), (int) ((GuiUtils.ITEM_ICON_SIZE + this.margin) * this.maxLine + this.margin), 1, 0xFF000000, 1);
+        GuiUtils.fill(graphics, (int) (this.bgX - this.margin), (int) (this.bgY - this.margin), (int) (180 + this.margin * 2), (int) (20 + (GuiUtils.ENTITY_ICON_SIZE + 3) * 5 + 20 + margin * 2 + 5), 0xCCC6C6C6, 2);
+        GuiUtils.fillOutLine(graphics, (int) (this.itemBgX - this.margin), (int) (this.itemBgY - this.margin), (int) ((GuiUtils.ENTITY_ICON_SIZE + this.margin) * this.itemPerLine + this.margin), (int) ((GuiUtils.ENTITY_ICON_SIZE + this.margin) * this.maxLine + this.margin), 1, 0xFF000000, 1);
         super.render(graphics, mouseX, mouseY, delta);
         // 保存输入框的文本, 防止窗口重绘时输入框内容丢失
         this.inputFieldText = this.inputField.getValue();
@@ -254,13 +219,6 @@ public class EntitySelectScreen extends Screen {
         AtomicBoolean flag = new AtomicBoolean(false);
         AtomicBoolean updateSearchResults = new AtomicBoolean(false);
         if (button == GLFW.GLFW_MOUSE_BUTTON_LEFT || button == GLFW.GLFW_MOUSE_BUTTON_RIGHT) {
-            // 控制按钮
-            OP_BUTTONS.forEach((key, value) -> {
-                if (value.isHovered() && value.isPressed()) {
-                    this.handleOperation(value, button, flag, updateSearchResults);
-                }
-                value.setPressed(false);
-            });
             // 物品按钮
             ITEM_BUTTONS.forEach(bt -> {
                 if (bt.isHovered() && bt.isPressed()) {
@@ -322,26 +280,8 @@ public class EntitySelectScreen extends Screen {
         return false;
     }
 
-    private NonNullList<ItemStack> getAllItemList() {
-        NonNullList<ItemStack> list = NonNullList.create();
-        LocalPlayer player = Minecraft.getInstance().player;
-        if (player != null) {
-            CreativeModeTabs.tryRebuildTabContents(player.connection.enabledFeatures(), true, player.level().registryAccess());
-        }
-        list.addAll(CreativeModeTabs.searchTab().getDisplayItems());
-        return list;
-    }
-
-    private List<ItemStack> getPlayerItemList() {
-        List<ItemStack> result = new ArrayList<>();
-        LocalPlayer player = Minecraft.getInstance().player;
-        if (player != null) {
-            result.addAll(player.getInventory().items);
-            result.addAll(player.getInventory().armor);
-            result.addAll(player.getInventory().offhand);
-            result = result.stream().filter(itemStack -> !itemStack.isEmpty() && itemStack.getItem() != Items.AIR).collect(Collectors.toList());
-        }
-        return result;
+    private List<EntityType<?>> getAllItemList() {
+        return new ArrayList<>(ForgeRegistries.ENTITY_TYPES.getValues().stream().toList());
     }
 
     /**
@@ -352,52 +292,11 @@ public class EntitySelectScreen extends Screen {
         this.bgY = this.height / 2 - 65;
         this.itemBgX = this.bgX + margin;
         this.itemBgY = this.bgY + 20;
-
-        // 初始化操作按钮
-        this.OP_BUTTONS.put(OperationButtonType.TYPE.getCode(), new OperationButton(OperationButtonType.TYPE.getCode(), context -> {
-            // 绘制背景
-            int lineColor = context.button().isHovered() ? 0xEEFFFFFF : 0xEE000000;
-            GuiUtils.fill(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), 0xEE707070, 2);
-            GuiUtils.fillOutLine(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), 1, lineColor, 2);
-            ItemStack itemStack = new ItemStack(this.inventoryMode ? Items.CHEST : Items.COMPASS);
-            context.graphics().renderItem(itemStack, (int) context.button().getX() + 2, (int) context.button().getY() + 2);
-            Text text = this.inventoryMode ? Text.i18n("列出模式\n物品栏 (%s)", playerItemList.size()) : Text.i18n("列出模式\n所有物品 (%s)", allItemList.size());
-            context.button().setTooltip(text);
-        }).setX(this.bgX - GuiUtils.ITEM_ICON_SIZE - 2 - margin - 3).setY(this.bgY + margin).setWidth(GuiUtils.ITEM_ICON_SIZE + 4).setHeight(GuiUtils.ITEM_ICON_SIZE + 4));
-        this.OP_BUTTONS.put(OperationButtonType.ITEM.getCode(), new OperationButton(OperationButtonType.ITEM.getCode(), context -> {
-            // 绘制背景
-            int lineColor = context.button().isHovered() ? 0xEEFFFFFF : 0xEE000000;
-            GuiUtils.fill(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), 0xEE707070, 2);
-            GuiUtils.fillOutLine(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), 1, lineColor, 2);
-            context.graphics().renderItem(this.currentItem, (int) context.button().getX() + 2, (int) context.button().getY() + 2);
-            context.button().setTooltip(GuiUtils.componentToText(this.currentItem.getHoverName().copy()));
-        }).setX(this.bgX - GuiUtils.ITEM_ICON_SIZE - 2 - margin - 3).setY(this.bgY + margin + GuiUtils.ITEM_ICON_SIZE + 4 + 1).setWidth(GuiUtils.ITEM_ICON_SIZE + 4).setHeight(GuiUtils.ITEM_ICON_SIZE + 4));
-        this.OP_BUTTONS.put(OperationButtonType.COUNT.getCode(), new OperationButton(OperationButtonType.COUNT.getCode(), context -> {
-            // 绘制背景
-            int lineColor = context.button().isHovered() ? 0xEEFFFFFF : 0xEE000000;
-            GuiUtils.fill(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), 0xEE707070, 2);
-            GuiUtils.fillOutLine(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), 1, lineColor, 2);
-            ItemStack itemStack = new ItemStack(Items.WRITABLE_BOOK);
-            context.graphics().renderItem(itemStack, (int) context.button().getX() + 2, (int) context.button().getY() + 2);
-            Text text = Text.i18n("设置数量\n当前 %s", this.currentItem.getCount());
-            context.button().setTooltip(text);
-        }).setX(this.bgX - GuiUtils.ITEM_ICON_SIZE - 2 - margin - 3).setY(this.bgY + margin + (GuiUtils.ITEM_ICON_SIZE + 4 + 1) * 2).setWidth(GuiUtils.ITEM_ICON_SIZE + 4).setHeight(GuiUtils.ITEM_ICON_SIZE + 4));
-        this.OP_BUTTONS.put(OperationButtonType.NBT.getCode(), new OperationButton(OperationButtonType.NBT.getCode(), context -> {
-            // 绘制背景
-            int lineColor = context.button().isHovered() ? 0xEEFFFFFF : 0xEE000000;
-            GuiUtils.fill(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), 0xEE707070, 2);
-            GuiUtils.fillOutLine(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), 1, lineColor, 2);
-            ItemStack itemStack = new ItemStack(Items.NAME_TAG);
-            context.graphics().renderItem(itemStack, (int) context.button().getX() + 2, (int) context.button().getY() + 2);
-            Text text = Text.i18n("编辑NBT");
-            context.button().setTooltip(text);
-        }).setX(this.bgX - GuiUtils.ITEM_ICON_SIZE - 2 - margin - 3).setY(this.bgY + margin + (GuiUtils.ITEM_ICON_SIZE + 4 + 1) * 3).setWidth(GuiUtils.ITEM_ICON_SIZE + 4).setHeight(GuiUtils.ITEM_ICON_SIZE + 4));
-
         // 滚动条
         this.OP_BUTTONS.put(OperationButtonType.SLIDER.getCode(), new OperationButton(OperationButtonType.SLIDER.getCode(), context -> {
             // 背景宽高
-            double bgWidth = (GuiUtils.ITEM_ICON_SIZE + margin) * itemPerLine;
-            double bgHeight = (GuiUtils.ITEM_ICON_SIZE + margin) * maxLine - margin;
+            double bgWidth = (GuiUtils.ENTITY_ICON_SIZE + margin) * itemPerLine;
+            double bgHeight = (GuiUtils.ENTITY_ICON_SIZE + margin) * maxLine - margin;
             // 绘制滚动条
             this.outScrollX = itemBgX + bgWidth + 2;
             this.outScrollY = itemBgY - this.margin + 1;
@@ -431,40 +330,30 @@ public class EntitySelectScreen extends Screen {
                     int j1 = context.button().getOperation() % itemPerLine;
                     int index = ((itemList.size() > itemPerLine * maxLine ? this.getScrollOffset() : 0) + i1) * itemPerLine + j1;
                     if (index >= 0 && index < itemList.size()) {
-                        ItemStack itemStack = itemList.get(index);
+                        EntityType<?> entityType = itemList.get(index);
                         // 物品图标在弹出层中的 x 位置
-                        double itemX = itemBgX + j1 * (GuiUtils.ITEM_ICON_SIZE + margin);
+                        double itemX = itemBgX + j1 * (GuiUtils.ENTITY_ICON_SIZE + margin);
                         // 物品图标在弹出层中的 y 位置
-                        double itemY = itemBgY + i1 * (GuiUtils.ITEM_ICON_SIZE + margin);
+                        double itemY = itemBgY + i1 * (GuiUtils.ENTITY_ICON_SIZE + margin);
                         // 绘制背景
                         int bgColor;
-                        if (context.button().isHovered() || ItemUtils.getId(itemStack).equalsIgnoreCase(this.getSelectedItemId())) {
+                        if (context.button().isHovered() || entityType.getDescriptionId().equalsIgnoreCase(this.getSelectedEntityId().toString())) {
                             bgColor = 0xEE7CAB7C;
                         } else {
                             bgColor = 0xEE707070;
                         }
-                        context.button().setX(itemX - 1).setY(itemY - 1).setWidth(GuiUtils.ITEM_ICON_SIZE + 2).setHeight(GuiUtils.ITEM_ICON_SIZE + 2)
-                                .setId(ItemUtils.getId(itemStack));
+                        context.button().setX(itemX - 1).setY(itemY - 1).setWidth(GuiUtils.ENTITY_ICON_SIZE + 2).setHeight(GuiUtils.ENTITY_ICON_SIZE + 2)
+                                .setId(entityType.getDescriptionId());
 
                         GuiUtils.fill(context.graphics(), (int) context.button().getX(), (int) context.button().getY(), (int) context.button().getWidth(), (int) context.button().getHeight(), bgColor);
-                        context.graphics().renderItem(itemStack, (int) context.button().getX() + 1, (int) context.button().getY() + 1);
+                        InventoryScreen.renderEntityInInventory(context.graphics(), (int) context.button().getX() + 1, (int) context.button().getY() + 1, 50, ARMOR_STAND_ANGLE, (Quaternionf) null, (LivingEntity) entityType.create(Minecraft.getInstance().level));
+                        //context.graphics().renderItem(itemStack, (int) context.button().getX() + 1, (int) context.button().getY() + 1);
                         // 绘制物品详情悬浮窗
                         context.button().setCustomPopupFunction(() -> {
                             if (context.button().isHovered()) {
-                                List<Component> list = itemStack.getTooltipLines(Minecraft.getInstance().player, Minecraft.getInstance().options.advancedItemTooltips ? TooltipFlag.Default.ADVANCED : TooltipFlag.Default.NORMAL);
-                                List<Component> list1 = Lists.newArrayList(list);
-                                Item item = itemStack.getItem();
-                                this.visibleTags.forEach((itemITag) -> {
-                                    if (itemStack.is(itemITag)) {
-                                        list1.add(1, (Component.literal("#" + itemITag.location())).withStyle(ChatFormatting.DARK_PURPLE));
-                                    }
-                                });
-                                for (CreativeModeTab modeTab : CreativeModeTabs.allTabs()) {
-                                    if (modeTab.contains(itemStack)) {
-                                        list1.add(1, modeTab.getDisplayName().copy().withStyle(ChatFormatting.BLUE));
-                                    }
-                                }
-                                context.graphics().renderTooltip(font, list1, itemStack.getTooltipImage(), itemStack, (int) context.mouseX(), (int) context.mouseY());
+                                List<Component> list1 = Lists.newArrayList(entityType.getDescription());
+                                
+                               // context.graphics().renderTooltip(font, list1, itemStack.getTooltipImage(), itemStack, (int) context.mouseX(), (int) context.mouseY());
                             }
                         });
                     } else {
@@ -482,35 +371,15 @@ public class EntitySelectScreen extends Screen {
     private void updateSearchResults() {
         String s = this.inputField == null ? null : this.inputField.getValue();
         this.itemList.clear();
-        this.visibleTags.clear();
         if (StringUtils.isNotNullOrEmpty(s)) {
-            SearchTree<ItemStack> isearchtree;
-            if (s.startsWith("#")) {
-                s = s.substring(1);
-                isearchtree = Minecraft.getInstance().getSearchTree(SearchRegistry.CREATIVE_TAGS);
-                this.updateVisibleTags(s);
-            } else {
-                isearchtree = Minecraft.getInstance().getSearchTree(SearchRegistry.CREATIVE_NAMES);
-            }
+            SearchTree<EntityType<?>> isearchtree = Minecraft.getInstance().getSearchTree(ModSearches.LIVING_ENTITY_KEY);
             this.itemList.addAll(isearchtree.search(s.toLowerCase(Locale.ROOT)));
         } else {
-            this.itemList.addAll(new ArrayList<>(this.inventoryMode ? this.playerItemList : this.allItemList));
+            this.itemList.addAll(new ArrayList<>(this.getAllItemList()));
         }
         this.setScrollOffset(0);
     }
 
-    private void updateVisibleTags(String string) {
-        int i = string.indexOf(58);
-        Predicate<ResourceLocation> predicate;
-        if (i == -1) {
-            predicate = (resourceLocation) -> resourceLocation.getPath().contains(string);
-        } else {
-            String s = string.substring(0, i).trim();
-            String s1 = string.substring(i + 1).trim();
-            predicate = (resourceLocation) -> resourceLocation.getNamespace().contains(s) && resourceLocation.getPath().contains(s1);
-        }
-        BuiltInRegistries.ITEM.getTagNames().filter((tagKey) -> predicate.test(tagKey.location())).forEach(this.visibleTags::add);
-    }
 
     private void setScrollOffset(double offset) {
         this.scrollOffset = (int) Math.max(Math.min(offset, (int) Math.ceil((double) (itemList.size() - itemPerLine * maxLine) / itemPerLine)), 0);
@@ -530,79 +399,13 @@ public class EntitySelectScreen extends Screen {
 
     private void handleItem(OperationButton bt, int button, AtomicBoolean flag) {
         if (button == GLFW.GLFW_MOUSE_BUTTON_LEFT) {
-            this.selectedItemId = bt.getId();
-            if (StringUtils.isNotNullOrEmpty(this.selectedItemId)) {
-                this.currentItem = ItemUtils.getItemStack(selectedItemId);
-                this.currentItem.setCount(1);
+            this.selectedEntityId = bt.getId();
+            if (StringUtils.isNotNullOrEmpty(this.selectedEntityId)) {
+                this.currentEntity = ForgeRegistries.ENTITY_TYPES.getValue(new ResourceLocation(selectedEntityId));
                 //LOGGER.debug("Select item: {}", ItemRewardParser.getDisplayName(this.currentItem));
                 flag.set(true);
 
             }
-        }
-    }
-
-    private void handleOperation(OperationButton bt, int button, AtomicBoolean flag, AtomicBoolean updateSearchResults) {
-        if (bt.getOperation() == OperationButtonType.TYPE.getCode()) {
-            this.inventoryMode = !this.inventoryMode;
-            updateSearchResults.set(true);
-            flag.set(true);
-        } else if (bt.getOperation() == OperationButtonType.ITEM.getCode()) {
-            String itemRewardJsonString = ItemUtils.serialize(this.currentItem).toString();
-            Minecraft.getInstance().setScreen(new StringInputScreen(this, Text.i18n("请输入物品Json").setShadow(true), Text.i18n("请输入"), "", itemRewardJsonString, input -> {
-                String result = "";
-                if (StringUtils.isNotNullOrEmpty(input)) {
-                    ItemStack itemStack;
-                    try {
-                        JsonObject jsonObject = GSON.fromJson(input, JsonObject.class);
-                        itemStack = ItemUtils.deserialize(jsonObject);
-                    } catch (Exception e) {
-                        LOGGER.error("Invalid Json: {}", input);
-                        itemStack = null;
-                    }
-                    if (itemStack != null && itemStack.getItem() != Items.AIR) {
-                        this.currentItem = itemStack;
-                        this.selectedItemId = ItemUtils.getId(this.currentItem);
-                    } else {
-                        result = String.format("物品Json[%s]输入有误", input);
-                    }
-                }
-                return result;
-            }));
-        } else if (bt.getOperation() == OperationButtonType.COUNT.getCode()) {
-            Minecraft.getInstance().setScreen(new StringInputScreen(this, Text.i18n("请输入物品数量").setShadow(true), Text.i18n("请输入"), "\\d{0,4}", String.valueOf(this.currentItem.getCount()), input -> {
-                String result = "";
-                if (StringUtils.isNotNullOrEmpty(input)) {
-                    int count = StringUtils.toInt(input);
-                    if (count > 0 && count <= 64 * 9 * 5) {
-                        this.currentItem.setCount(count);
-                    } else {
-                        result = String.format("物品数量[%s]输入有误", input);
-                    }
-                }
-                return result;
-            }));
-        } else if (bt.getOperation() == OperationButtonType.NBT.getCode()) {
-            String itemNbtJsonString = ItemUtils.getNbtString(this.currentItem);
-            Minecraft.getInstance().setScreen(new StringInputScreen(this, Text.i18n("请输入物品NBT").setShadow(true), Text.i18n("请输入"), "", itemNbtJsonString, input -> {
-                String result = "";
-                if (StringUtils.isNotNullOrEmpty(input)) {
-                    ItemStack itemStack;
-                    try {
-                        itemStack = ItemUtils.getItemStack(ItemUtils.getId(this.currentItem.getItem()) + input, true);
-                        itemStack.setCount(this.currentItem.getCount());
-                    } catch (Exception e) {
-                        LOGGER.error("Invalid NBT: {}", input);
-                        itemStack = null;
-                    }
-                    if (itemStack != null && itemStack.hasTag()) {
-                        this.currentItem = itemStack;
-                        this.selectedItemId = ItemUtils.getId(this.currentItem);
-                    } else {
-                        result = String.format("物品NBT[%s]输入有误", input);
-                    }
-                }
-                return result;
-            }));
         }
     }
 }
